--- a/src/main/resources/templates/musicianProfile.html
+++ b/src/main/resources/templates/musicianProfile.html
@@ -4,10 +4,10 @@
 <head th:include="includes :: indexHead"></head>
 <body th:inline="text" class="blue-grey lighten-5">
 
+<div th:include="navbar :: navHome"></div>
 
-<main  th:inline="text" >
+<main  th:inline="text">
     <section class="blue darken-2 profileBanner" th:style="'background:url('+ @{${musicianProfile.coverPicImage}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-        <div th:include="navbar :: navHome"></div>
 
         <a href="#coverMusicianPic" class="modal-trigger tooltipped" data-position="right" data-delay="50" data-tooltip="Update Cover Image"><i class="coverBanner text-accent-4 material-icons">camera_alt</i></a>
         <div class="white-text  bannerBio ">
@@ -57,42 +57,79 @@
         </div>
         <div class="col s12 m8">
             <div class="row">
-                <div class="col s12 m12 card">
+                <div class="col s12">
+                    <ul class="tabs z-depth-4">
+                        <li class="tab col s3"><a href="#music">My Music</a></li>
+                        <li class="tab col s3"><a href="#upEvents">Upcoming Events</a></li>
+                        <li class="tab col s3"><a href="#areaGigs">Gigs in Area</a></li>
+                        <li class="tab col s3"><a href="#appliedGigs">Applied Gigs</a></li>
+                    </ul>
+                </div>
+                <div id="music" class="col s12 container">
+                    <div class="card musicCard">
 
-                    <h4 class="center-align">My Music
-                        <span>
+                        <h4 class="center-align">My Music
+                            <span>
                 <a class="waves-effect waves-light btn-floating modal-trigger tooltipped" data-position="top" data-delay="50" data-tooltip="Add a YouTube video of your music" href="#addMusicContent"><i class="material-icons">add</i></a>
                 </span>
-                        <div th:if="${media.isEmpty()}">
-                            <h5>Add Your Music</h5>
+                            <div th:if="${media.isEmpty()}">
+                                <h5>Add Your Music</h5>
+                            </div>
+                        </h4>
+                        <div class="card container musicTable">
+                            <table class="bordered white ">
+                                <tr  th:each="media : ${media}">
+                                    <td class="valign-wrapper">
+                                        <i class="orange-text text-accent-4 material-icons">play_circle_filled</i>
+                                        <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
+                                    </td>
+                                    <td>
+                                        <a class="waves-effect waves-light modal-trigger btn-flat float-right" th:href="'#mediaUpdate' + ${media.id}">
+                                            <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Music">edit</i>
+                                        </a>
+                                    </td>
+                                    <td>
+                                        <form th:action="'/musician/media/delete/' + ${media.id}" method="post">
+                                            <button class="modal-action media waves-effect waves-light btn-flat" type="submit" >
+                                                <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Music">delete</i>
+                                            </button>
+                                        </form>
+                                    </td>
+                                    <div th:include="modals :: mediaUpdate"></div>
+                                </tr>
+                            </table>
                         </div>
-                    </h4>
-                    <div class="card">
-                        <table class="bordered white container">
-                            <tr  th:each="media : ${media}">
-                                <td class="valign-wrapper">
-                                    <i class="orange-text text-accent-4 material-icons">music_note</i>
-                                    <a  th:href="@{${media.media_url}}" target="_blank"  th:text="${media.title}" class="mediaTitle"></a>
-                                </td>
-                                <td>
-                                    <a class="waves-effect waves-light modal-trigger btn-flat float-right" th:href="'#mediaUpdate' + ${media.id}">
-                                        <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Edit Music">edit</i>
-                                    </a>
-                                </td>
-                                <td>
-                                    <form th:action="'/musician/media/delete/' + ${media.id}" method="post">
-                                        <button class="modal-action media waves-effect waves-light btn-flat" type="submit" >
-                                            <i class="material-icons orange-text text-accent-4 tooltipped" data-position="top" data-delay="50" data-tooltip="Delete Music">delete</i>
-                                        </button>
-                                    </form>
-                                </td>
-                                <div th:include="modals :: mediaUpdate"></div>
-                            </tr>
-                        </table>
-                    </div>
 
+                    </div>
                 </div>
-                <div class="col s12 m5 ">
+                <div id="upEvents" class="col s12">
+                    <h4 class="center-align">Upcoming Events</h4>
+                    <div th:if="${hired.isEmpty()}">
+                        <h5>No Upcoming Events</h5>
+                    </div>
+                    <div class="row"  >
+                        <div class="col s12 m4" th:each="hired : ${hired}">
+                            <div class="gigCard z-depth-2">
+                                <div class="gigImage" th:style="'background:url('+ @{${hired.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                                    <div class="dateBox white orange-text text-accent-4 center-align">
+                                        <h4>[[${#dates.format(hired.gig.gigStart,'d')}]]</h4>
+                                        <p>[[${#dates.format(hired.gig.gigStart,'MMMM')}]]</p>
+                                    </div>
+                                </div>
+                                <div class="gigInfo white center-align">
+                                    <p><b>[[${hired.gig.gigTitle}]]</b></p>
+                                    <p >[[${hired.gig.gigLocation}]]</p>
+                                    <div class="divider"></div>
+                                    <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${hired.gig.id}}">More Info</a>
+
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+                <div id="areaGigs" class="col s12">
                     <h4 class="center-align">Gigs in the Area
                         <span>
                     <a class="btn-floating waves-effect waves-light tooltipped" data-position="top" data-delay="50" data-tooltip="Search Gigs" href="/musician/search/"><i class="material-icons">search</i></a>
@@ -101,52 +138,55 @@
                     <div th:if="${gig.isEmpty()}">
                         <h5>No Gigs found in your area</h5>
                     </div>
-                    <div   th:each="gig : ${gig}">
+                    <div class="row"  >
+<div class="col s12 m4" th:each="gig : ${gig}">
+    <div class="gigCard z-depth-2">
+        <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+            <div class="dateBox white orange-text text-accent-4 center-align">
+                <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
+                <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
+            </div>
+        </div>
+        <div class="gigInfo white center-align">
+            <p><b>[[${gig.gigTitle}]]</b></p>
+            <p >[[${gig.gigLocation}]]</p>
+            <div class="divider"></div>
+            <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">More Info</a>
 
-                        <div class="gigCard z-depth-2">
-                            <div class="gigImage" th:style="'background:url('+ @{${gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-                                <div class="dateBox white orange-text text-accent-4 center-align">
-                                    <h4>[[${#dates.format(gig.gigStart,'d')}]]</h4>
-                                    <p>[[${#dates.format(gig.gigStart,'MMMM')}]]</p>
-                                </div>
-                            </div>
-                            <div class="gigInfo white center-align">
-                                <p><b>[[${gig.gigTitle}]]</b></p>
-                                <p >[[${gig.gigLocation}]]</p>
-                                <div class="divider"></div>
-                                <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${gig.id}}">More Info</a>
+        </div>
+    </div>
+</div>
 
-                            </div>
-                        </div>
 
                     </div>
-
                 </div>
-
-                <div class="col s12 m5 offset-m1 ">
+                <div id="appliedGigs" class="col s12">
                     <h4 class="center-align">Applied Gigs</h4>
 
+<div class="row">
+    <div class="col s12 m4" th:each="applied : ${applied}" >
+        <div class="gigCard z-depth-2">
+            <div class="gigImage" th:style="'background:url('+ @{${applied.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center; height: 150px;'">
+                <div class="dateBox white orange-text text-accent-4 center-align">
+                    <h4>[[${#dates.format(applied.gig.gigStart,'d')}]]</h4>
+                    <p>[[${#dates.format(applied.gig.gigStart,'MMMM')}]]</p>
+                </div>
+            </div>
+            <div class="gigInfo white center-align">
+                <p><b>[[${applied.gig.gigTitle}]]</b></p>
+                <p >[[${applied.gig.gigLocation}]]</p>
+                <div class="divider"></div>
+                <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${applied.gig.id}}">More Info</a>
 
-                        <div th:each="applied : ${applied}" >
-                            <div class="gigCard z-depth-2">
-                                <div class="gigImage" th:style="'background:url('+ @{${applied.gig.gigArt}}+'); background-size: cover; background-repeat: no-repeat; background-position: center;'">
-                                    <div class="dateBox white orange-text text-accent-4 center-align">
-                                        <h4>[[${#dates.format(applied.gig.gigStart,'d')}]]</h4>
-                                        <p>[[${#dates.format(applied.gig.gigStart,'MMMM')}]]</p>
-                                    </div>
-                                </div>
-                                <div class="gigInfo white center-align">
-                                    <p><b>[[${applied.gig.gigTitle}]]</b></p>
-                                    <p >[[${applied.gig.gigLocation}]]</p>
-                                    <div class="divider"></div>
-                                    <a class=" waves-effect waves-light white-text orange accent-4 hoverable gigApplied " th:href="'/musician/gig/' + @{${applied.gig.id}}">More Info</a>
+            </div>
+        </div>
 
-                                </div>
-                            </div>
-                        </div>
+    </div>
+</div>
 
                 </div>
             </div>
+
         </div>
 
     </div>
